--- a/.github/workflows/old_lede_seedConfig.yml
+++ b/.github/workflows/old_lede_seedConfig.yml
@@ -8,7 +8,7 @@ on:
 
 #         git checkout fac34a2dfe4e416c3d09e060503c671c9e8efe30 （2024-09-30）
 #         git checkout 36c00a420926fa06a0d02d52badfbb5fd43e1762 （2025-02-18）
-
+#         git checkout ae810b9dd6f1fff39d80f2fc355b8b09c86e1e0f（提交日期 2025 年 3 月 31 日）
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   CONFIG_FILE: .config
@@ -46,11 +46,11 @@ jobs:
         cd openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
 
-    - name: 加载自定义订阅源 # git checkout fac34a2dfe4e416c3d09e060503c671c9e8efe30
+    - name: 加载自定义订阅源 git checkout 到指定提交日期
       run: |
         chmod +x $DIY_P1_SH
         cd openwrt
-        git checkout 36c00a420926fa06a0d02d52badfbb5fd43e1762
+        git checkout ae810b9dd6f1fff39d80f2fc355b8b09c86e1e0f
         $GITHUB_WORKSPACE/$DIY_P1_SH
            
     - name: 更新feeds订阅源
