--- a/.github/workflows/old_lede_build.yml
+++ b/.github/workflows/old_lede_build.yml
@@ -13,6 +13,7 @@ on:
 #         git checkout 36c00a420926fa06a0d02d52badfbb5fd43e1762 （2025-02-18）
 #         git checkout ae810b9dd6f1fff39d80f2fc355b8b09c86e1e0f（提交日期 2025 年 3 月 31 日）
 #  c35bad328703cae4268f1df6290cd86ebfa1bbe8（2024-08-18）
+#  7ea44fc419be2475a07e6e737d97cd44c5c3bf3d  （提交于 2024 年 6 月 28 日）
 
 
 env:
@@ -64,7 +65,7 @@ jobs:
       run: |
         chmod +x $DIY_P1_SH
         cd openwrt
-        git checkout c35bad328703cae4268f1df6290cd86ebfa1bbe8
+        git checkout 7ea44fc419be2475a07e6e737d97cd44c5c3bf3d
         $GITHUB_WORKSPACE/$DIY_P1_SH
 
     - name: 更新feeds订阅源
