--- a/.github/workflows/old_lede_seedConfig.yml
+++ b/.github/workflows/old_lede_seedConfig.yml
@@ -48,20 +48,18 @@ jobs:
         cd openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
 
-    - name: 加载自定义订阅源 git checkout 到指定提交日期
+    - name: 加载自定义订阅源, 再 git checkout 到指定提交日期
       run: |
         chmod +x $DIY_P1_SH
         cd openwrt
         git checkout 7ea44fc419be2475a07e6e737d97cd44c5c3bf3d
         $GITHUB_WORKSPACE/$DIY_P1_SH
-           
-    - name: 更新feeds订阅源
-      run: cd openwrt && ./scripts/feeds update -a
 
-    - name: 安装feeds订阅源
+    - name: 更新feeds订阅源
       run: |
-        cd openwrt && ./scripts/feeds install -a
-        echo "FIRMWARE=$PWD" >> $GITHUB_ENV
+        cd openwrt
+        ./scripts/feeds update -a && ./scripts/feeds install -a
+        echo "FIRMWARE=$PWD" >> $GITHUB_ENV        
       
     - name: 使用SSH连接
       if: ${{ github.event.inputs.open_ssh == '1' && !cancelled() }}
